[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/environment/flashlight map.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/world/tilemap.png" type="Texture" id=2]
[ext_resource path="res://logic/mobs/weapons/Flashlight.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 352, 32, 32, 32 )

[node name="Flashlight" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -670.0
margin_top = -385.0
margin_right = 710.0
margin_bottom = 425.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashlightSprite" type="Sprite" parent="."]
rotation = -3.14159
scale = Vector2( 0.455542, 0.455542 )
texture = SubResource( 1 )

[node name="AreaOfEffect" type="Area2D" parent="."]
rotation = -1.5708
collision_layer = 64
collision_mask = 4

[node name="Light" type="Light2D" parent="AreaOfEffect"]
position = Vector2( -99, 2 )
scale = Vector2( 0.382813, 0.353999 )
texture = ExtResource( 1 )

[node name="AreaOfEffectCollision" type="CollisionPolygon2D" parent="AreaOfEffect"]
polygon = PoolVector2Array( -1, -1, -171, -76, -170, 80, -1, 1 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpotterTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="area_entered" from="AreaOfEffect" to="." method="_on_AreaOfEffect_area_entered"]
[connection signal="area_exited" from="AreaOfEffect" to="." method="_on_AreaOfEffect_area_exited"]
[connection signal="body_entered" from="AreaOfEffect" to="." method="_on_AreaOfEffect_body_entered"]
[connection signal="body_exited" from="AreaOfEffect" to="." method="_on_AreaOfEffect_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="SpotterTimer" to="." method="_on_SpotterTimer_timeout"]
